--- a/index.html
+++ b/index.html
@@ -1,1 +1,7 @@
 <!-- Write your HTML in this file -->
+<!DOCTYPE html>
+<html>
+  <body>
+    <h1><a href =https://flatironschool.com>Flatiron School</a></h1>
+  </body>
+</html>
